--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="col-lg-12 text-center main">
         <div>
-          <h1 class="mt-5">{{title}}</h1>
+          <h1 class="mt-5">Weather Finder</h1>
           <p class="lead">Enter the name of the city and press search!</p>
         </div>
         <div>
