--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,14 +34,14 @@
       <div class="col-lg-12 text-center main">
         <div>
           <h1 class="mt-5">Weather Finder</h1>
-          <p class="lead">Enter the name of the city and press search!</p>
+          <p class="lead">Enter the name of the city and press go!</p>
         </div>
         <div>
           <form action="/" method="post">
             <input name="city" type="text" />
             <button>Go!</button>
           </form>
-          <div class="mt-3">{{weather}} {{error}}</div>
+          <div class="mt-3">{{weather}}</div>
         </div>
       </div>
     </div>
