added Weather module

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,7 +41,10 @@
             <input name="city" type="text" />
             <button>Go!</button>
           </form>
-          <div class="mt-3">{{weather}}</div>
+          <div class="mt-3">
+            {{weather}}
+            {{error}}
+          </div>
         </div>
       </div>
     </div>
